Fixed permissions when installing ZEsarUX on Linux: zxuno.flash and tbblue.mmc are now writable by anyone
Fixed Text Adventure Graphics rendering invalid characters
Fixed esxdos handler when using fopen flags: FA_READ + FA_WRITE + FA_OPEN_CREAT
Fixed ZRCP bug when closing connection (socket descriptor was kept open)
Fixed reading ESC key on curses driver
Fixed support for .config files on .dsk

* Misc Changes:

Changed CPC Copy key assignation: now is the End key on your keyboard

* As always, there are some other minor bugfixes and improvements

----------------------------------------


Version 10.3 - La Abadia del Crimen edition. 10 May 2023

There are lots of changes in this version, but some of them are remarkable:
- Added machines Amstrad PCW 8256, PCW 8512, CPC 6128, CPC 664
- Fixed 3" CF2 floppy disk emulation (used on +3, CPC, PCW): the floppy disk emulation has been rewritten from scratch and now is near perfect
- Lots of improvements on Debug CPU window
- Fixed almost all annoying audio clicks on Windows version (and on SDL audio driver on Linux)


The full changelog for this version 10.3 is:

* New things added:

Added Machine Amstrad PCW 8256
Added Machine Amstrad PCW 8512
Added Machine Amstrad CPC 6128
Added Machine Amstrad CPC 664
Added Visual Floppy to see floppy disk (+3, CPC, PCW, Betadisk) activity
Added DSK disk info menu: to get tracks and sectors of a disk
Added F-Functions: Poke, Visual Real Tape, Settings, Switch footer
Added Process Switcher window, which is like a "Taskbar" on the ZX Desktop
Added ZRCP command: "close-all-menus"
Added icon/F-key to open any window identified by its name
Allow F-keys to assign extra info for actions (like window name on openwindow action, or snapshot name on linktosnapshot action)
Added more Hotswap combinations
Added Advanced menu items: now by default, advanced menu items are hidden, you should enable them on Settings->Advanced menu items