@@ -20887,6 +20887,8 @@ void util_realtape_browser(char *filename, char *texto_browser,int maxima_longit
     contienen datos de una posible cinta convertida de wav/rwa/smp a tap en memoria, desde Standard tape
     */
 
+   //printf("Inicio util_realtape_browser\n");
+
 
     //Preservar valores anteriores
     int antes_spec_smp_read_index_tap=spec_smp_read_index_tap;
@@ -20957,7 +20959,7 @@ void util_realtape_browser(char *filename, char *texto_browser,int maxima_longit
 
     ptr_mycinta_smp=fopen(file_to_open,"rb");
 
-    printf("1\n");
+
 
     if (ptr_mycinta_smp==NULL) {
         debug_printf(VERBOSE_ERR,"Error opening file");
@@ -20970,24 +20972,23 @@ void util_realtape_browser(char *filename, char *texto_browser,int maxima_longit
         //cada vez se abre el archivo de nuevo, y evitar que se tenga que convertir (por ejemplo de wav) una y otra vez
         lee_smp_ya_convertido=0;
 
-        printf("1.1\n");
 
         main_spec_rwaatap(array_block_positions,max_array_block_positions,codigo_retorno,longitud_archivo_smp);
 
-        printf("1.2\n");
+
 
         //generar el tap de salida si conviene
         if (tap_output!=NULL) {
             util_save_file(spec_smp_memory,spec_smp_total_read,tap_output);
         }
 
-        printf("1.3\n");
+
 
         //Este lo ha asignado la rutina main_spec_rwaatap
         free(spec_smp_memory);
     }
 
-    printf("2\n");
+
 
     main_spec_rwaatap_pointer_print=NULL;
 
